--- a/style.css
+++ b/style.css
@@ -11,5 +11,37 @@ body{
 }
 
 .header{
-    
+    width: 100%;
+    height: 64px;
+    background-color: wheat;
+}
+
+.nav{
+    width: 100%;
+    height: 64px;
+    background-color: pink; 
+}
+
+.banner{
+    width: 100%;
+    height: 64px;
+    background-color: blue;
+}
+
+.article{
+    width: 100%;
+    height: 64px;
+    background-color: green;
+}
+
+.galery{
+    width: 100%;
+    height: 64px;
+    background-color: red;
+}
+
+.pie-pag{
+    width: 100%;
+    height: 64px;
+    background-color: yellow;
 }
