--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body{
   width: 100%;
   height: 100%;
   background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .header{
@@ -30,7 +34,7 @@ body{
 
 .article{
     width: 100%;
-    height: 64px;
+    height: 80px;
     background-color: green;
 }
 
