--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
 }
 
+
+
 body{
   width: 100%;
   height: 100%;
-  background-color: aqua;
+  background-color:#e8d1e7;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -17,7 +19,7 @@ body{
 .header{
     width: 80%;
     height: 4em;
-    background-color: wheat;
+    background-color: #8059df;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -27,28 +29,87 @@ body{
 .nav{
     width: 80%;
     height: 4em;
-    background-color: pink;
+    background-color: #6043c6;
+}
+
+.barnav{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+
 }
 
+.menu{
+    width: 20%;
+    height: 100%;
+    background-color: purple;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+}
+
+.menu:hover{
+    background-color: white;
+    color: purple;
+}
 
 .banner{
     width: 80%;
-    height: 4em;
-    background-color: blue;
+    height: calc(100vh - 8em);
+    background-color: #493497;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
+.title-banner{
+    font-size: 3em;
+    
+}
+
+.btn-banner{
+    color: whitesmoke;
+    background-color: blueviolet;
+    padding: 1em 4em;
+    font-size: 1.25em;
+    margin: 1em 0em;
+    border-radius: 0.5em;
+}
+.btn-banner:hover{
+    background-color: whitesmoke;
+    color: blueviolet;
+}
 .article{
     width: 80%;
-    height: 4em;
-    background-color: green;
+    height: calc(100vh);
+    background-color: #a489cb;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-article{
+    font-size: 3em;
+}
+
+.parrafo-article{
+    margin: 1em 0;
+    font-size: 1.5em;
+    width: 80%;
+    text-align: justify;
 }
 
 .pie-pag{
     width: 80%;
     height:4em;
-    background-color: purple;
+    background-color: #8059df;
 }
